--- a/.env
+++ b/.env
@@ -33,7 +33,7 @@ TRUSTED_PROXIES=
 # ============================================================================
 # IMPORTANT: Replace <username> and <password> with your actual MongoDB Atlas credentials
 MONGO_URI=mongodb+srv://cakr4:Ingatallah14@cluster1.t0zbvg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
-DB_NAME=test
+DB_NAME=sos
 
 # MongoDB Connection Pool Settings
 MONGO_MAX_POOL_SIZE=100
