--- a/.env
+++ b/.env
@@ -32,7 +32,7 @@ TRUSTED_PROXIES=
 # DATABASE CONFIGURATION (MongoDB Atlas)
 # ============================================================================
 # IMPORTANT: Replace <username> and <password> with your actual MongoDB Atlas credentials
-MONGO_URI=mongodb+srv://cakr4:Ingatallah14@cluster1.t0zbvg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster1
+MONGO_URI=mongodb://localhost:27017
 DB_NAME=sos
 
 # MongoDB Connection Pool Settings
